<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.home.SingUpFragment">

    <LinearLayout
        android:id="@+id/LinLayRegistro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/frame_background"
        android:scrollbars="vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="1dp"
        android:paddingLeft="1dp"
        android:paddingTop="3dp"
        android:paddingEnd="1dp"
        android:paddingRight="1dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true">
                <EditText
                    android:id="@+id/EdtxtRegistroNom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:ems="10"
                    android:textAllCaps="true"
                    android:hint="@string/txthintregistrousername"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true">

                <EditText
                    android:id="@+id/EdtxtRegistroApell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:hint="@string/txthintregistrouserlastname"
                    android:inputType="text"
                    android:textAllCaps="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="10">
                <EditText
                    android:id="@+id/EdtxtRegistroCed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txthintregistrocedula"
                    android:inputType="number"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/EdtxtRegistroEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:hint="@string/txthintregistroemail"
                    android:inputType="textEmailAddress"
                    android:textAllCaps="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">
                <EditText
                    android:id="@+id/EdtxtRegistroContrs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:hint="@string/txthintregistrocontras"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/BtnRegistroRegis"
        android:text="@string/btnregistroregistrar"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:textColor="@color/colorBlanco"
        android:background="@drawable/button_ui_background"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

</RelativeLayout>