<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.home.LoginFragment">

    <LinearLayout
        android:id="@+id/LinLayLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/frame_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="2dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:scrollbars="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10">

            <EditText
                android:id="@+id/EdtxtLoginCedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txthintsingupemail"
                android:ems="10"
                android:inputType="number"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/EdtxtLoginContrs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/txthintsingupcontras"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/SwLoginRecuerdame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Recuerdame"
            android:textOff="No"
            android:textOn="Yes"
            android:textColor="@color/colorAccent" >
        </Switch>
        <TextView
            android:id="@+id/TxtVwLoginOlvidoContrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/txthintsingupolvidocontras"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
    <Button
        android:id="@+id/BtnLoginSingUp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_ui_background"
        android:text="@string/btnsingupinicioses"
        android:textColor="@color/colorBlanco" />

</RelativeLayout>